--- a/helm/ingress.yaml
+++ b/helm/ingress.yaml
@@ -1,12 +1,12 @@
 ingress:
   hosts:
-    - host: adminer.k8s.com
+    - host: deployment-adminer.com
       paths:
         - path: /
           backend:  
             serviceName: adminer
             servicePort: 8080
-    - host: kanban.k8s.com
+    - host: deployment-kanban.com
       paths: 
         - path: /api/
           backend:
