--- a/k8s/ingress-controller.yaml
+++ b/k8s/ingress-controller.yaml
@@ -6,14 +6,14 @@ metadata:
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
-    - host: adminer.k8s.com
+    - host: deployment-adminer.com
       http:
         paths:
           - path: /
             backend:  
               serviceName: adminer
               servicePort: 8080
-    - host: kanban.k8s.com
+    - host: deployment-kanban.com
       http:
         paths: 
           - path: /api/
